token lab: onUpdate prop

--- a/packages/token-lab/index.html
+++ b/packages/token-lab/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="icon" href="/favicon.svg" />
+    <meta name="theme-color" content="color(srgb .7450980392156863 .9607843137254902 0)" />
+    <link rel="icon" href="https://terrazzo.app/favicon.svg">
     <title>Token Lab: build, edit, and customize DTCG tokens.json</title>
   </head>
   <body>
